# VisQL

./: .gitignore  README.md  pyproject.toml
src/backend/: app.py
src/backend/api/: run_code.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: app.tsx  apply-mode.ts  base.scss  index.tsx  local-storage.ts
src/frontend/src/commons/: breadcrumbs.tsx  common-components.tsx  disclaimer-flashbar-item.tsx  external-link-group.tsx  external-link.tsx  full-page-header.tsx  help-panel.tsx  index.ts  info-link.tsx  navigation.tsx  notifications.tsx
src/frontend/src/components/: content.tsx  header.tsx  side-navigation.tsx
src/frontend/src/widgets/: index.ts  interfaces.ts
src/frontend/src/widgets/base-static-widget/: index.tsx  styles.module.scss
src/frontend/src/widgets/diagram/: index.tsx
src/frontend/src/widgets/editor/: index.tsx
src/visql/: main.py  pyproject.toml
src/visql/api/: __init__.py  core.py
src/visql/db/: coerce_type.py  connector.py
src/visql/models/: column.py  diagram.py  mark.py  queryable.py  table.py
src/visql/parser/expressions/: expressions.py
src/visql/scripts/: start_backend.sh
src/visql/semantic_checker/: constraint.py  join.py  semantic_checker.py
tests/: test_column.py
