[project]
name = "visql"
version = "0.1.0"
description = ""
authors = [
    {name = "Xiang Yu Tuang",email = "xiangyutuang@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb (>=1.3.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]


[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"

