[project]
name = "visql"
version = "0.1.0"
description = ""
authors = [
    {name = "Xiang Yu Tuang",email = "xiangyutuang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "duckdb (>=1.3.2,<2.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"

[tool.poetry]
packages = [
  { include = "*" }
]